fix(story/GD-48): JsonTemplateContext jsonpath eval fix